--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "oafa",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.21",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.3"
-  }
+	"name": "oafa",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "11.1.2",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"@monaco-editor/react": "latest",
+		"react-markdown": "latest",
+		"remark-gfm": "latest",
+		"rehype-katex": "latest",
+		"remark-math": "latest",
+		"prism-react-renderer": "latest"
+	},
+	"devDependencies": {
+		"@types/react": "17.0.21",
+		"eslint": "7.32.0",
+		"eslint-config-next": "11.1.2",
+		"typescript": "4.4.3"
+	}
 }
