--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.4.1",
+		"@emotion/styled": "^11.3.0",
+		"@monaco-editor/react": "latest",
+		"@mui/icons-material": "latest",
+		"@mui/material": "^5.0.0",
+		"@types/cookie": "^0.4.1",
+		"cookie": "^0.4.1",
+		"googleapis": "latest",
 		"next": "11.1.2",
+		"prism-react-renderer": "latest",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"@monaco-editor/react": "latest",
+		"react-google-login": "latest",
 		"react-markdown": "latest",
-		"remark-gfm": "latest",
 		"rehype-katex": "latest",
+		"remark-gfm": "latest",
 		"remark-math": "latest",
-		"prism-react-renderer": "latest"
+		"sass": "^1.41.1"
 	},
 	"devDependencies": {
 		"@types/react": "17.0.21",
