--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"prod": "next start -p 9038"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.4.1",
