--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"remark-gfm": "latest",
 		"remark-math": "latest",
 		"sass": "^1.41.1",
-		"@element-ts/palladium": "latest"
+		"node-fetch": "latest"
 	},
 	"devDependencies": {
 		"@types/react": "17.0.21",
