--- a/oafa.service
+++ b/oafa.service
@@ -1,13 +1,13 @@
 [Unit]
-Description=The backend for oafa
+Description=The backend for dotmd.
 After=network.target
 
 [Service]
 type=simple
 User=root
-WorkingDirectory=/srv/oafa
+WorkingDirectory=/srv/dotmd
 ExecStart=/usr/bin/npm run prod
 
 [Install]
 WantedBy=multi-user.target
-Alias=oafa
+Alias=dotmd
