--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
 		"rehype-katex": "latest",
 		"remark-gfm": "latest",
 		"remark-math": "latest",
-		"sass": "^1.41.1"
+		"sass": "^1.41.1",
+		"codemirror": "latest",
+		"react-codemirror2" : "latest",
+		"@types/codemirror": "latest"
 	},
 	"devDependencies": {
 		"@types/react": "17.0.21",
