--- a/package.json
+++ b/package.json
@@ -16,24 +16,25 @@
 		"@monaco-editor/react": "latest",
 		"@mui/icons-material": "latest",
 		"@mui/material": "^5.0.0",
+		"@types/codemirror": "latest",
 		"@types/cookie": "^0.4.1",
+		"codemirror": "latest",
 		"cookie": "^0.4.1",
 		"googleapis": "latest",
+		"md-to-pdf": "^4.0.1",
 		"moment": "^2.29.1",
 		"next": "11.1.2",
 		"node-fetch": "latest",
 		"prism-react-renderer": "latest",
 		"react": "17.0.2",
+		"react-codemirror2": "latest",
 		"react-dom": "17.0.2",
 		"react-google-login": "latest",
 		"react-markdown": "latest",
 		"rehype-katex": "latest",
 		"remark-gfm": "latest",
 		"remark-math": "latest",
-		"sass": "^1.41.1",
-		"codemirror": "latest",
-		"react-codemirror2" : "latest",
-		"@types/codemirror": "latest"
+		"sass": "^1.41.1"
 	},
 	"devDependencies": {
 		"@types/react": "17.0.21",
