--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
 		"@mui/material": "^5.0.0",
 		"@types/codemirror": "latest",
 		"@types/cookie": "^0.4.1",
+		"@types/parse": "^2.18.13",
 		"codemirror": "latest",
 		"cookie": "^0.4.1",
-		"googleapis": "latest",
+		"googleapis": "^92.0.0",
 		"md-to-pdf": "^4.0.1",
 		"moment": "^2.29.1",
 		"next": "11.1.2",
+		"next-auth": "^4.0.5",
 		"node-fetch": "latest",
+		"parse": "^3.4.1",
 		"prism-react-renderer": "latest",
 		"react": "17.0.2",
 		"react-codemirror2": "latest",
