--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"prod": "next start -p 9038"
 	},
 	"dependencies": {
+		"@element-ts/silicon": "^1.0.2",
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
 		"@monaco-editor/react": "latest",
