holy shit so much

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"codemirror": "latest",
 		"cookie": "^0.4.1",
 		"googleapis": "^92.0.0",
+		"jimp": "^0.16.1",
 		"md-to-pdf": "^4.0.1",
 		"moment": "^2.29.1",
 		"mongodb": "^4.3.1",
@@ -32,6 +33,7 @@
 		"parse": "^3.4.1",
 		"prism-react-renderer": "latest",
 		"react": "17.0.2",
+		"react-async-hook": "^4.0.0",
 		"react-codemirror2": "latest",
 		"react-dom": "17.0.2",
 		"react-google-login": "latest",
