--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"devserver": "next dev -p 9038",
+		"devprod": "next start -p 9039",
 		"prod": "next start -p 9038"
 	},
 	"dependencies": {
