--- a/dotmd.service
+++ b/dotmd.service
@@ -6,6 +6,7 @@ After=network.target
 type=simple
 User=root
 WorkingDirectory=/srv/dotmd
+EnvironmentFile=env
 ExecStart=/usr/bin/npm run prod
 
 [Install]
