--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"react": "17.0.2",
 		"react-async-hook": "^4.0.0",
 		"react-codemirror2": "latest",
+		"react-dnd": "^14.0.5",
+		"react-dnd-html5-backend": "^14.1.0",
 		"react-dom": "17.0.2",
 		"react-google-login": "latest",
 		"react-markdown": "latest",
