--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"mongodb": "^4.3.1",
 		"next": "11.1.2",
 		"next-auth": "^4.0.5",
+		"next-pwa": "^5.4.4",
 		"node-fetch": "latest",
 		"parse": "^3.4.1",
 		"prism-react-renderer": "latest",
