--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,17 +4,17 @@
 	"description": "A fully fledged markdown editor and file system.",
 	"icons": [
 		{
-			"src": "/oofa-32.png",
+			"src": "/oafa-32.png",
 			"sizes": "32x32",
 			"type": "image/png"
 		},
 		{
-			"src": "/oofa-92.png",
+			"src": "/oafa-92.png",
 			"sizes": "92x92",
 			"type": "image/png"
 		},
 		{
-			"src": "/oofa-512.png",
+			"src": "/oafa-512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
