--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/codemirror": "latest",
 		"@types/cookie": "^0.4.1",
 		"@types/parse": "^2.18.13",
+		"@types/react-resizable": "^1.7.4",
 		"codemirror": "latest",
 		"cookie": "^0.4.1",
 		"googleapis": "^92.0.0",
@@ -41,6 +42,7 @@
 		"react-dom": "17.0.2",
 		"react-google-login": "latest",
 		"react-markdown": "latest",
+		"react-resizable": "^3.0.4",
 		"react-sketch-canvas": "^6.1.0",
 		"rehype-katex": "latest",
 		"remark-gfm": "latest",
